# federated_fall_detection

./: .gitignore  reqirenments.txt
datasets/: activity_map.csv  cleaned_meta.json.example
src/: centeralize.py  classifier.py  conf_matrixes.py  configs.py  dataset.py  plotter.py  result.py
src/fl-fall/: README.md  pyproject.toml  runner.bash
src/fl-fall/fl_fall/: __init__.py  client_app.py  dataset.py  server_app.py  strategy.py  task.py
